// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogReportPost - Snapshots > matches snapshot for issue selection step 1`] = `
<div
  class="fixed inset-0 z-50 flex justify-center items-end sm:items-center"
>
  <div
    aria-labelledby="radix-normalized"
    class="relative z-50 grid duration-200 m-0 sm:m-4 data-[state=closed]:animate-out data-[state=open]:animate-in data-[state=closed]:slide-out-to-bottom data-[state=open]:slide-in-from-bottom sm:data-[state=closed]:slide-out-to-bottom-0 sm:data-[state=open]:slide-in-from-bottom-0 sm:data-[state=closed]:fade-out-0 sm:data-[state=open]:fade-in-0 sm:data-[state=closed]:zoom-out-95 sm:data-[state=open]:zoom-in-95 max-h-[calc(100dvh-2rem)] max-w-[100vw] gap-6 overflow-y-auto border bg-background p-6 shadow-lg sm:max-w-[calc(100vw-2rem)] sm:rounded-xl sm:rounded-b-lg sm:p-8 rounded-t-lg border-b-0 sm:border-b w-xl"
    data-cy="dialog-content"
    data-slot="dialog-content"
    data-state="open"
    data-testid="dialog-content"
    id="radix-normalized"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <h2
      class="sr-only"
      id="radix-normalized"
    >
      Report Post
    </h2>
    <div
      class="flex flex-col gap-1.5 pr-6"
      data-slot="dialog-header"
      data-testid="dialog-header"
    >
      <h2
        class="text-xl/[1.4] font-bold text-foreground sm:text-2xl/[1.333] sr-only"
        data-slot="dialog-title"
        data-testid="dialog-title"
        id="radix-normalized"
      >
        Report Post
      </h2>
      <p
        class="text-sm leading-normal font-medium text-muted-foreground sr-only"
        data-slot="dialog-description"
        id="radix-normalized"
      >
        Report post dialog
      </p>
    </div>
    <div
      data-testid="dialog-report-post-issue-step"
    >
      DialogReportPostIssueStep
    </div>
    <button
      class="absolute top-4 right-4 cursor-pointer rounded-full bg-secondary p-2 transition-all duration-300 ease-in-out outline-none hover:bg-secondary/80 focus:outline-none disabled:pointer-events-none disabled:opacity-50"
      data-slot="dialog-close"
      data-testid="dialog-close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      <span
        class="sr-only"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`DialogReportPost - Snapshots > matches snapshot for reason step 1`] = `
<div
  class="fixed inset-0 z-50 flex justify-center items-end sm:items-center"
>
  <div
    aria-labelledby="radix-normalized"
    class="relative z-50 grid duration-200 m-0 sm:m-4 data-[state=closed]:animate-out data-[state=open]:animate-in data-[state=closed]:slide-out-to-bottom data-[state=open]:slide-in-from-bottom sm:data-[state=closed]:slide-out-to-bottom-0 sm:data-[state=open]:slide-in-from-bottom-0 sm:data-[state=closed]:fade-out-0 sm:data-[state=open]:fade-in-0 sm:data-[state=closed]:zoom-out-95 sm:data-[state=open]:zoom-in-95 max-h-[calc(100dvh-2rem)] max-w-[100vw] gap-6 overflow-y-auto border bg-background p-6 shadow-lg sm:max-w-[calc(100vw-2rem)] sm:rounded-xl sm:rounded-b-lg sm:p-8 rounded-t-lg border-b-0 sm:border-b w-xl"
    data-cy="dialog-content"
    data-slot="dialog-content"
    data-state="open"
    data-testid="dialog-content"
    id="radix-normalized"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <h2
      class="sr-only"
      id="radix-normalized"
    >
      Report Post
    </h2>
    <div
      class="flex flex-col gap-1.5 pr-6"
      data-slot="dialog-header"
      data-testid="dialog-header"
    >
      <h2
        class="text-xl/[1.4] font-bold text-foreground sm:text-2xl/[1.333] sr-only"
        data-slot="dialog-title"
        data-testid="dialog-title"
        id="radix-normalized"
      >
        Report Post
      </h2>
      <p
        class="text-sm leading-normal font-medium text-muted-foreground sr-only"
        data-slot="dialog-description"
        id="radix-normalized"
      >
        Report post dialog
      </p>
    </div>
    <div
      data-testid="dialog-report-post-reason-step"
    >
      <button
        data-testid="back-button"
      >
        Back
      </button>
      <button
        data-testid="submit-button"
      >
        Submit
      </button>
      DialogReportPostReasonStep
    </div>
    <button
      class="absolute top-4 right-4 cursor-pointer rounded-full bg-secondary p-2 transition-all duration-300 ease-in-out outline-none hover:bg-secondary/80 focus:outline-none disabled:pointer-events-none disabled:opacity-50"
      data-slot="dialog-close"
      data-testid="dialog-close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      <span
        class="sr-only"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`DialogReportPost - Snapshots > matches snapshot for success state 1`] = `
<div
  class="fixed inset-0 z-50 flex justify-center items-end sm:items-center"
>
  <div
    aria-labelledby="radix-normalized"
    class="relative z-50 grid duration-200 m-0 sm:m-4 data-[state=closed]:animate-out data-[state=open]:animate-in data-[state=closed]:slide-out-to-bottom data-[state=open]:slide-in-from-bottom sm:data-[state=closed]:slide-out-to-bottom-0 sm:data-[state=open]:slide-in-from-bottom-0 sm:data-[state=closed]:fade-out-0 sm:data-[state=open]:fade-in-0 sm:data-[state=closed]:zoom-out-95 sm:data-[state=open]:zoom-in-95 max-h-[calc(100dvh-2rem)] max-w-[100vw] gap-6 overflow-y-auto border bg-background p-6 shadow-lg sm:max-w-[calc(100vw-2rem)] sm:rounded-xl sm:rounded-b-lg sm:p-8 rounded-t-lg border-b-0 sm:border-b w-xl"
    data-cy="dialog-content"
    data-slot="dialog-content"
    data-state="open"
    data-testid="dialog-content"
    id="radix-normalized"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <h2
      class="sr-only"
      id="radix-normalized"
    >
      Report Post
    </h2>
    <div
      class="flex flex-col gap-1.5 pr-6"
      data-slot="dialog-header"
      data-testid="dialog-header"
    >
      <h2
        class="text-xl/[1.4] font-bold text-foreground sm:text-2xl/[1.333] sr-only"
        data-slot="dialog-title"
        data-testid="dialog-title"
        id="radix-normalized"
      >
        Report Post
      </h2>
      <p
        class="text-sm leading-normal font-medium text-muted-foreground sr-only"
        data-slot="dialog-description"
        id="radix-normalized"
      >
        Report post dialog
      </p>
    </div>
    <div
      data-testid="dialog-report-post-success"
    >
      DialogReportPostSuccess
    </div>
    <button
      class="absolute top-4 right-4 cursor-pointer rounded-full bg-secondary p-2 transition-all duration-300 ease-in-out outline-none hover:bg-secondary/80 focus:outline-none disabled:pointer-events-none disabled:opacity-50"
      data-slot="dialog-close"
      data-testid="dialog-close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      <span
        class="sr-only"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;
